--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "npx nx serve app-shell",
-    "serve:all": "concurrently \"npx nx serve app-shell\" \"npx nx serve assets\" \"npx nx serve loan-products\"",
+    "start:all": "concurrently \"npx nx serve app-shell\" \"npx nx serve assets\" \"npx nx serve loan-products\"",
     "dashboard": "npx nx serve dashboard",
     "sandbox": "npx nx serve sandbox",
     "reinstall": "rmdir node_modules /s /q && rmdir .angular /s /q && del package-lock.json /q &&  npm i",
