--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "18.0.2",
-    "@angular/common": "18.0.2",
-    "@angular/compiler": "18.0.2",
-    "@angular/core": "18.0.2",
-    "@angular/forms": "18.0.2",
-    "@angular/platform-browser": "18.0.2",
-    "@angular/platform-browser-dynamic": "18.0.2",
-    "@angular/platform-server": "18.0.2",
-    "@angular/router": "18.0.2",
-    "@angular/ssr": "18.0.3",
+    "@angular/animations": "18.2.0",
+    "@angular/common": "18.2.0",
+    "@angular/compiler": "18.2.0",
+    "@angular/core": "18.2.0",
+    "@angular/forms": "18.2.0",
+    "@angular/platform-browser": "18.2.0",
+    "@angular/platform-browser-dynamic": "18.2.0",
+    "@angular/platform-server": "18.2.0",
+    "@angular/router": "18.2.0",
+    "@angular/ssr": "18.2.0",
     "@apollo/client": "^3.9.9",
     "@aws/clickstream-web": "^0.12.1",
     "@fortawesome/angular-fontawesome": "0.14.1",
@@ -54,7 +54,7 @@
     "@fortawesome/free-solid-svg-icons": "6.5.1",
     "@graphql-codegen/introspection": "^4.0.3",
     "@ngneat/until-destroy": "^10.0.0",
-    "@nx/angular": "19.2.3",
+    "@nx/angular": "19.6.0",
     "@types/react": "^18.2.79",
     "angular-cli-ghpages": "^2.0.0-beta.2",
     "apollo-angular": "^6.0.0",
@@ -73,54 +73,54 @@
   },
   "devDependencies": {
     "@angular-architects/module-federation": "^18.0.4",
-    "@angular-devkit/build-angular": "18.0.3",
-    "@angular-devkit/core": "18.0.3",
-    "@angular-devkit/schematics": "18.0.3",
+    "@angular-devkit/build-angular": "18.2.0",
+    "@angular-devkit/core": "18.2.0",
+    "@angular-devkit/schematics": "18.2.0",
     "@angular-eslint/eslint-plugin": "18.0.1",
     "@angular-eslint/eslint-plugin-template": "18.0.1",
     "@angular-eslint/template-parser": "18.0.1",
     "@angular/cli": "~17.2.0",
-    "@angular/compiler-cli": "18.0.2",
-    "@angular/language-service": "18.0.2",
+    "@angular/compiler-cli": "18.2.0",
+    "@angular/language-service": "18.2.0",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/near-operation-file-preset": "^3.0.0",
     "@graphql-codegen/schema-ast": "^4.1.0",
     "@graphql-codegen/typescript": "^4.0.9",
     "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
     "@graphql-codegen/typescript-operations": "^4.2.3",
-    "@nx/cypress": "19.2.3",
-    "@nx/eslint": "19.2.3",
-    "@nx/eslint-plugin": "19.2.3",
-    "@nx/jest": "19.2.3",
-    "@nx/js": "19.2.3",
-    "@nx/web": "19.2.3",
-    "@nx/workspace": "19.2.3",
-    "@schematics/angular": "18.0.3",
+    "@nx/cypress": "19.6.0",
+    "@nx/eslint": "19.6.0",
+    "@nx/eslint-plugin": "19.6.0",
+    "@nx/jest": "19.6.0",
+    "@nx/js": "19.6.0",
+    "@nx/web": "19.6.0",
+    "@nx/workspace": "19.6.0",
+    "@schematics/angular": "18.2.0",
     "@swc-node/register": "1.9.2",
     "@swc/core": "1.5.7",
     "@swc/helpers": "0.5.11",
     "@types/express": "4.17.14",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "29.5.12",
     "@types/node": "^18.16.9",
     "@types/ramda": "^0.29.12",
-    "@typescript-eslint/eslint-plugin": "7.3.0",
-    "@typescript-eslint/parser": "7.3.0",
-    "@typescript-eslint/utils": "^8.0.0-alpha.28",
+    "@typescript-eslint/eslint-plugin": "7.16.0",
+    "@typescript-eslint/parser": "7.16.0",
+    "@typescript-eslint/utils": "7.16.0",
     "browser-sync": "^3.0.0",
     "concurrently": "^8.2.2",
-    "cypress": "13.8.0",
+    "cypress": "13.13.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "14.1.0",
     "ngx-build-plus": "^18.0.0",
-    "nx": "19.2.3",
+    "nx": "19.6.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "^5.4.5",
+    "typescript": "5.5.4",
     "webpack-bundle-analyzer": "^4.10.1"
   }
 }
